# THECALT-ONLINE-FINAL

./: accounts.txt  main.py  problems.txt  pyproject.toml  recreds.json  subs.csv  todo.md  zescrap.py
contest-archive/categories/: contest.txt
contest-archive/points/: contest.txt  contest2022.txt
contest-archive/problems/: contest.txt
contest-archive/scorereports/: contest.txt  contest2022.txt
contest/answers/: contest2022.txt  trial.txt
contest/categories/: contest2022.txt
contest/points/: trial.txt
contest/problems/: contest2022.txt
gs/: admin.json  altcheck.json  altpost.json  altstart.json  check.json  post.json  start.json
practice/: calt_round_2.txt  calt_round_3.txt  opcat.txt
static/classroom/: messages.css
static/css/: 404.css  community.css  contact.css  contest.css  main.css  mainstyle.css  print.css  style.css
static/js/: alerts.js  app.js  draw.js  mathjax-config.js
static/notifs/: notifs.css
templates/: a.html  contestnav.html  nav.html  notnav.html  script.js
templates/admin/: alerts.html  data.html  files.html  summary.html
templates/contest/: checkpoint.html  contest.html  dashboard.html  index.html  login.html  message.html  messagepr.html  oldcontest.html  potd.html  potdarchive.html  potw.html  practice.html  profile.html  reaper.html  search.html  signup.html  submitted.html  success.html  user.html  verified.html
templates/course/: adminclassroom.html  assignment.html  class.html  classroom.html  course.html  mycourses.html  review.html  transcript.html
templates/main/: 404.html  500.html  contact.html  (+2 more)
(+12 files in other folders)
