[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
flask-recaptcha = "^0.4.2"
flask-discord = "^0.1.69"
flask-socketio = "^5.4.1"
flask = "^3.0.3"
discord-py = "^2.4.0"
replit = "^4.1.0"
flask-mail = "^0.10.0"
libgravatar = "^1.0.4"
stripe = "^11.1.0"
werkzeug = "^3.0.4"
flask-session = "^0.8.0"
numpy = "^2.1.2"
requests = "^2.32.3"
requests-oauthlib = "^2.0.0"
discord-webhook = "^1.3.1"
gspread = "^6.1.3"
s1db = "^1.0.3"
pickledb = "^0.9.2"
markdown = "^3.7"
oauth2client = "^4.1.3"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"